--- a/index.html
+++ b/index.html
@@ -3,4 +3,14 @@
    <head>
    <link rel="canonical" = href="{{ site.url }}{{ page.url }}"/>
    </head>
+   <body>
+		<div id="wrapper">
+			<div class="content">    
+				<p>This text is in frontend</p>
+			</div>
+			<div class="background">
+				<p>Background text</p>
+			</div>
+		</div>
+   </body>
 </html>
