--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
 <link rel="stylesheet" href="./frontend.css"/>
 <link rel="stylesheet" href="./svgiconbase.css"/>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="./backgroundanimator.js"></script>
-</head>
 
+
+<!--
+
+	<script src="./backgroundanimator.js"></script>
+
+-->
 <body>
+	
+<video autoplay muted loop id="myVideo">
+	<source src="SiteContent/1290860851.mp4" type="video/mp4">
+</video>
+	
 <div class="backHolder">
   <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 		 width="478.62px" height="71.03px" viewBox="0 0 478.62 71.03" style="overflow:visible;enable-background:new 0 0 478.62 71.03;"
